tests/should_fail/match_char_no_wildcard.nv
// should_fail: char match with no wildcard (not exhaustive)
module match_char_no_wildcard

fn check(c: Char) -> String {
    return match c {
        'a' => "a",
        'b' => "b"
    }
}
